--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -24,3 +24,12 @@
     width: 90%;
 }
 
+.infos{
+    /* width: 50px;
+    height: 50px; */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center ;
+}
