--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     color: white;
     gap: 20px;
-    padding: 0px 15px ;
+    padding: 6px 15px ;
 
 }
 
@@ -24,4 +24,26 @@
 .searchBox {
     width: 250px;
 }
+.dishBtn{
+    /* color: white; */
+    background-color: green !important; 
+    color:white !important
+    /* background-color: green; */
+}
+.dishBtn:hover{
+    background-color: white !important;
+    color: #ff9800 !important;
+}
+.logoutBtn {
+    background-color: rgb(180, 17, 17) !important;
+    color: white !important;
+}
+.indianCuisineLink{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding-right: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
 
